--- a/views/articles/_form_fields.ejs
+++ b/views/articles/_form_fields.ejs
@@ -10,7 +10,7 @@
   />
 </div>
 <div class="form-group">
-  <label for="description">Title</label>
+  <label for="description">Description</label>
   <textarea name="description" id="description" class="form-control">
 <%= article.description%></textarea
   >
